<resources>
    <string name="app_name">TimeClock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <string name="str_main_addClock">添加闹钟</string>
    <string name="str_main_myClock">我的闹钟</string>
    
    <!-- ClockActivity  -->
    <!--  Title -->
    <string name="str_clock_title_cancel">取消</string>
    <string name="str_clock_title_sure">确定</string>
    <string name="str_clock_title_setting">设置闹钟</string>
    <!-- ClockActivity -->
    <string name="str_clock_repeat">重复</string>
    <string name="str_clock_repeat_ontTime">只响一次</string>
    <string name="str_clock_ring">铃声</string>
    <string name="str_clock_ring_default">默认铃声</string>
    <string name="str_clock_remark">备注</string>
    <string name="str_clock_remark_default">闹钟备注</string>
    <string name="title_activity_ring">RingActivity</string>

    <!-- RingActivity -->
    <string name="str_ring_ring">ring ring ring!!</string>
    <string name="str_ring_stop">关闭闹钟</string>
    <string name="str_ring_again">10分钟后再响</string>
</resources>
